# threat-intel-ioc-correlator

./: .gitignore  README.md  correlator.py  iocs.csv  pyproject.toml
examples/: events.jsonl
src/file_integrity_monitor/: cli.py
tests/: test_correlator.py
